pum_claims.css
.views-page .view-id-claims .view-header a {
  background-color: #483493 !important;

}
.page-portal-view-claim .line-amount-eur {
    cursor: pointer;
}
.page-portal-view-claim .line-amount-eur .helpicon {
    background: url('help.png') no-repeat 0 0;
    padding: 10px 0 0 26px;
}
.page-portal-view-claim .line-amount-eur .line-log {
    position: absolute;
    background-color: black;
    color: white;
    padding: 5px;
    width: 350px;
}
#pum-claims-line-form #edit-expense-date {
    padding: 0px;
}
#pum-claims-line-form .form-item-expense-date-date .description {
    display: none;
}
#pum-claims-line-form .description > #description_help {
  display: none;
}
#pum-claims-line-form .description:hover > #description_help {
  display: block;
}
#pum-claims-line-form #remuneration_policy {
  border-style: solid;
  border-width: 0px;
  cursor: pointer;
  font-family: "merriweatherregular","Times New Roman",Times,serif;
  font-weight: normal;
  line-height: normal;
  margin: 0 0 1.4285714286rem;
  position: relative;
  text-decoration: none;
  text-align: center;
  -webkit-appearance: none;
  -webkit-border-radius: 0;
  display: inline-block;
  padding-top: 0.7142857143rem;
  padding-right: 1.4285714286rem;
  padding-bottom: 0.7857142857rem;
  padding-left: 1.4285714286rem;
  font-size: 0.7857142857rem;
  background-color: #483493;
  border-color: #483493;
  color: #ffffff;
}
#pum-claims-line-form #remuneration_policy:hover {
  background-color: #cb5e00;
}
#pum-claims-line-form #remuneration_policy a{
  color: #FFFFFF;
}
#pum-claims-line-form #expense_type_description {
  padding: 5px;
}
#pum-claims-remark {
  background-color:#F57B20;
  color:#483493;
  height:auto;
  min-height:50px;
  padding:10px 10px 10px 10px;
  margin-bottom: 10px;
}
#pum-claims-remark #pum-claims-remark-description {
  color: #FFFFFF;
}
span.helpbutton {
  background-color:inherit;
  font-family: inherit;
  padding: inherit;
  position:relative;
  background: url('help.png') no-repeat 0 0;
  padding:10px 0px 0px 26px;
  cursor: help;
}
code.help div {
  display:none;
  position: absolute;
  top: 0;
  left: 26px;
  background-color: #000000;
  color: #ffffff;
  border: 1px solid red;
  padding: 5px;
}
code.help span.close {
  position: absolute;
  right: 0;
  top: 0;
}

